feat: created alert

--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
 
     <title>Programming Logic</title>
   </head>
-  <body></body>
+  <body>
+    <script>
+      alert("Primeira instrução JavaScript pop-up ");
+    </script>
+  </body>
 </html>
