feat: concatenate a subtraction

--- a/logica-de-programacao-I-aula-2/logica/concatenacao.html
+++ b/logica-de-programacao-I-aula-2/logica/concatenacao.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <script>
-      document.write("A idade do Thiago é ");
-      document.write("18" + "20");
+      document.write("Thiago nasceu em ");
+      document.write(2022 - 39);
     </script>
   </body>
 </html>
