--- a/logica-de-programacao-I-aula-2/logica/concatenacao.html
+++ b/logica-de-programacao-I-aula-2/logica/concatenacao.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <script>
-      document.write("Thiago nasceu em ");
-      document.write(2022 - 39);
+      document.write("A média das idades é ");
+      document.write((20 + 10 + 30) / 3);
     </script>
   </body>
 </html>
