--- a/logica-de-programacao-I-aula-2/logica/concatenacao.html
+++ b/logica-de-programacao-I-aula-2/logica/concatenacao.html
@@ -6,8 +6,10 @@
   </head>
   <body>
     <script>
-      document.write("A média das idades é ");
-      document.write((20 + 10 + 30) / 3);
+      document.write("Thiago nasceu em " + (2022 - 39) + "<br>");
+      document.write("Joaquim nasceu em " + (2022 - 20));
+      document.write("<br>");
+      document.write("Barney nasceu em " + (2022 - 40));
     </script>
   </body>
 </html>
