feat: subtracting date and displaying age

--- a/logica-de-programacao-I-aula-2/logica/concatenacao.html
+++ b/logica-de-programacao-I-aula-2/logica/concatenacao.html
@@ -6,10 +6,11 @@
   </head>
   <body>
     <script>
-      document.write("Thiago nasceu em " + (2022 - 39) + "<br>");
-      document.write("Joaquim nasceu em " + (2022 - 20));
+      document.write("Thiago tem " + (2022 - 1983) + " anos.");
       document.write("<br>");
-      document.write("Barney nasceu em " + (2022 - 40));
+      document.write("Joaquim tem " + (2022 - 1996) + " anos.");
+      document.write("<br>");
+      document.write("Barney tem " + (2022 - 1976) + " anos.");
     </script>
   </body>
 </html>
