feat: age variable defined for person

--- a/logica-de-programacao-I-aula-2/logica/variavel.html
+++ b/logica-de-programacao-I-aula-2/logica/variavel.html
@@ -17,7 +17,12 @@
       document.write("Barney tem " + (ano - 1976) + " anos.");
       document.write("<br>");
 
-      var media = (39 + 26 + 48) / 3;
+      var idadeThiago = 39;
+      var idadeJoaquim = 26;
+      var idadeBarney = 48;
+
+      var media = (idadeThiago + idadeJoaquim + idadeBarney) / 3;
+      document.write("<br>");
       document.write("A média das idades é " + Math.round(media));
     </script>
   </body>
