--- a/logica-de-programacao-I-aula-2/logica/variavel.html
+++ b/logica-de-programacao-I-aula-2/logica/variavel.html
@@ -23,7 +23,12 @@
 
       var media = (idadeThiago + idadeJoaquim + idadeBarney) / 3;
       document.write("<br>");
-      document.write("A média das idades é " + Math.round(media));
+      document.write("A média das idades é " + Math.round(media) + " anos.");
+
+      document.write("<br>");
+      var nome = "Thiago";
+      document.write("<br>");
+      document.write("A idade de " + nome + " é " + idadeThiago + " anos");
     </script>
   </body>
 </html>
