feat: parameter passed to function mostra

--- a/logica-de-programacao-I-aula-2/logica/melhorando_manutencao_codigo.html
+++ b/logica-de-programacao-I-aula-2/logica/melhorando_manutencao_codigo.html
@@ -9,13 +9,20 @@
       function pulaLinha() {
         document.write("<br>");
       }
+
+      function mostra(frase) {
+        document.write(frase);
+      }
+
       var ano = 2022;
 
-      document.write("Thiago tem " + (ano - 1983) + " anos.");
+      mostra("Thiago tem " + (ano - 1983) + " anos.");
       pulaLinha();
-      document.write("Joaquim tem " + (ano - 1996) + " anos.");
+
+      mostra("Joaquim tem " + (ano - 1996) + " anos.");
       pulaLinha();
-      document.write("Barney tem " + (ano - 1976) + " anos.");
+
+      mostra("Barney tem " + (ano - 1976) + " anos.");
     </script>
   </body>
 </html>
