chore: retorno-funcao returned direct

--- a/logica-de-programacao-I-aula-2/logica/retorno-funcao.html
+++ b/logica-de-programacao-I-aula-2/logica/retorno-funcao.html
@@ -16,8 +16,7 @@
       }
 
       function calculaIMC(peso, altura) {
-        var imc = peso / (altura * altura);
-        return imc;
+        return peso / (altura * altura);
       }
 
       var imcPessoaUm = calculaIMC(74, 1.7);
