chore: sum calculated imc's

--- a/logica-de-programacao-I-aula-2/logica/retorno-funcao.html
+++ b/logica-de-programacao-I-aula-2/logica/retorno-funcao.html
@@ -21,9 +21,9 @@
 
       var imcPessoaUm = calculaIMC(74, 1.7);
       var imcPessoaDois = calculaIMC(84, 1.69);
+      var totalImc = imcPessoaUm + imcPessoaDois;
 
-      mostra(imcPessoaUm);
-      mostra(imcPessoaDois);
+      document.write("A soma dos imc's é " + totalImc);
     </script>
   </body>
 </html>
