--- a/logica-de-programacao-I-aula-2/logica/challenge/imc.html
+++ b/logica-de-programacao-I-aula-2/logica/challenge/imc.html
@@ -34,8 +34,8 @@
         mostra("Você está acima do recomendado");
       }
 
-      if (imc >= 18.5) {
-        if (imc <= 35) mostra("Seu IMC está excelente!");
+      if (imc >= 18.5 || imc <= 35) {
+        mostra("Seu IMC está excelente!");
       }
     </script>
   </body>
