feat: automatic number draw function created

--- a/logica-de-programacao-I-aula-2/logica/challenge/jogo_adivinha.html
+++ b/logica-de-programacao-I-aula-2/logica/challenge/jogo_adivinha.html
@@ -15,7 +15,10 @@
         pulaLinha();
       }
 
-      var inputNumero = prompt("Digite um número de 1 a 10 e tente acertar");
+      function sorteia(n) {
+        return Math.round(Math.random() * n);
+      }
+      var inputNumero = sorteia(10);
       var numeroAleatorio = Math.round(Math.random() * 10);
 
       if (inputNumero == numeroAleatorio) {
