--- a/logica-de-programacao-I-aula-2/logica/challenge/numero_20_e_0.html
+++ b/logica-de-programacao-I-aula-2/logica/challenge/numero_20_e_0.html
@@ -15,17 +15,11 @@
         pulaLinha();
       }
 
-      var contador = 30;
+      var contador = 20;
 
-      while (contador <= 40) {
-        if (contador == 33) {
-          contador = contador + 1;
-        } else if (contador == 37) {
-          contador = contador + 1;
-        } else {
-          mostra(contador);
-          contador = contador + 1;
-        }
+      while (contador >= 0) {
+        mostra(contador);
+        contador = contador - 1;
       }
 
       mostra("FIM");
