--- a/logica-de-programacao-I-aula-2/logica/challenge/jogo_adivinha.html
+++ b/logica-de-programacao-I-aula-2/logica/challenge/jogo_adivinha.html
@@ -16,28 +16,32 @@
       }
 
       function sorteia(n) {
-        return Math.round(Math.random() * n);
+        return Math.floor(Math.random() * n);
       }
 
-      function verificaMaiorMenor(aleatorio, sorteado) {
-        if (sorteado < aleatorio) {
-          return " <strong>menor</strong> que o pensado";
-        } else {
-          return "<strong>maior</strong>  que o pensado";
-        }
-      }
-
-      var numeroAutomatico = sorteia(10);
+      var inicializador = 1;
+      var tentativa = 3;
       var numeroAleatorio = Math.round(Math.random() * 10);
 
-      if (numeroAutomatico == numeroAleatorio) {
-        mostra("Você acertou 🎉");
-      } else {
-        mostra(
-          "😥 O número era " +
-            verificaMaiorMenor(numeroAleatorio, numeroAutomatico) +
-            ", tente novamente!"
-        );
+      while (inicializador <= tentativa) {
+        var chute = parseInt(prompt("⚽ Chute um numero de 1 a 10! "));
+
+        if (chute === numeroAleatorio) {
+          alert("Você acertou 🎉");
+          inicializador = tentativa;
+        } else if (tentativa == inicializador) {
+          mostra(
+            "😭 O número era " +
+              "<strong>" +
+              numeroAleatorio +
+              "</strong>" +
+              " você esgotou no número maximo de tentativas!"
+          );
+        } else {
+          alert("😥 tente novamente!");
+        }
+
+        inicializador++;
       }
     </script>
   </body>
