--- a/logica-de-programacao-I-aula-2/logica/adivinha_mais.html
+++ b/logica-de-programacao-I-aula-2/logica/adivinha_mais.html
@@ -18,6 +18,7 @@
         } else {
           alert("você ERROU!!!!!!!!");
         }
+        input.value = "";
       }
 
       button.onclick = verifica;
