feat: added focus

--- a/logica-de-programacao-I-aula-2/logica/adivinha_mais.html
+++ b/logica-de-programacao-I-aula-2/logica/adivinha_mais.html
@@ -19,6 +19,7 @@
           alert("você ERROU!!!!!!!!");
         }
         input.value = "";
+        input.focus();
       }
 
       button.onclick = verifica;
