--- a/logica-de-programacao-I-aula-2/logica/adivinha_mais.html
+++ b/logica-de-programacao-I-aula-2/logica/adivinha_mais.html
@@ -8,9 +8,10 @@
     <input />
     <button>Compare com o meu segredo</button>
     <script>
-      var segredo = 5;
+      var segredo = Math.round(Math.random() * 10);
       var input = document.querySelector("input");
       var button = document.querySelector("button");
+      input.focus();
 
       function verifica() {
         if (input.value == segredo) {
