--- a/logica-de-programacao-I/logica/adivinha_mais.html
+++ b/logica-de-programacao-I/logica/adivinha_mais.html
@@ -8,21 +8,27 @@
     <input />
     <button>Compare com o meu segredo</button>
     <script>
-      var segredo = Math.round(Math.random() * 10);
+      var segredos = [5, 7, 10, 2];
       var input = document.querySelector("input");
-      var button = document.querySelector("button");
       input.focus();
 
       function verifica() {
-        if (input.value == segredo) {
-          alert("você ACERTOU!");
-        } else {
+        var achou = false;
+
+        for (var posicao = 0; posicao < segredos.length; posicao++) {
+          if (input.value == segredos[posicao]) {
+            achou = true;
+            alert("você ACERTOU!");
+            break;
+          }
+        }
+        if (achou == false) {
           alert("você ERROU!!!!!!!!");
         }
         input.value = "";
         input.focus();
       }
-
+      var button = document.querySelector("button");
       button.onclick = verifica;
     </script>
   </body>
